# lumen-graphics

./: CMakeLists.txt  README.md
docs/: README.md  architecture.md  philosophy.md  roadmap.md
include/: Application.hpp  Logger.hpp  Renderer.hpp  Window.hpp
src/: Application.cpp  Logger.cpp  Renderer.cpp  Window.cpp  main.cpp
